compiler-plugin/src/testData/export/ExportObject.kt
package export

@ExportSymbol
<!EXPORTED_MARKER_Classifier(packageName=[export], classNames=[MyClass])!>object MyClass<!>

object NotExported